--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,4 +35,4 @@ jobs:
  
     - name: Run Script
       run: |
-        python AutoClicker.py
+        python AutoClicker.py "https://www.socialmatte.com"
