--- a/.github/workflows/python-app-LinkdIn-Yash.yml
+++ b/.github/workflows/python-app-LinkdIn-Yash.yml
@@ -6,8 +6,8 @@ name: AutoClicker-LinkdIn-Yash
 on:
   push:
     branches: [ master ]
-  schedule:
-    - cron: "*/10 * * * *"
+#   schedule:
+#     - cron: "*/10 * * * *"
     
 jobs:
   build:
