--- a/.github/workflows/python-app-LinkdIn-Rishabh.yml
+++ b/.github/workflows/python-app-LinkdIn-Rishabh.yml
@@ -6,8 +6,8 @@ name: AutoClicker-LinkdIn-Rishabh
 on:
   push:
     branches: [ master ]
-#   schedule:
-#     - cron: "*/10 * * * *"
+  schedule:
+    - cron: "*/10 * * * *"
     
 jobs:
   build:
