--- a/.github/workflows/python-app-tummygotyummy-3.yml
+++ b/.github/workflows/python-app-tummygotyummy-3.yml
@@ -35,4 +35,4 @@ jobs:
 
     - name: Run Script
       run: |
-        python AutoClicker-tummygotyummy.py "https://www.tummygotyummy.com"
+        python AutoClicker-tummygotyummy.py "http://raboninco.com/15tuO"
