--- a/.github/workflows/ig_impression.yml
+++ b/.github/workflows/ig_impression.yml
@@ -34,3 +34,12 @@ jobs:
     - name: Run Script
       run: |
         python ig_impression.py "https://www.instagram.com/p/CIs_W2-MU0M/?igshid=2nbkek49imi"
+        python ig_impression.py "https://www.instagram.com/p/CIs_W2-MU0M/?igshid=2nbkek49imi"
+        python ig_impression.py "https://www.instagram.com/p/CIs_W2-MU0M/?igshid=2nbkek49imi"
+        python ig_impression.py "https://www.instagram.com/p/CIs_W2-MU0M/?igshid=2nbkek49imi"
+        python ig_impression.py "https://www.instagram.com/p/CIs_W2-MU0M/?igshid=2nbkek49imi"
+        python ig_impression.py "https://www.instagram.com/p/CIs_W2-MU0M/?igshid=2nbkek49imi"
+        python ig_impression.py "https://www.instagram.com/p/CIs_W2-MU0M/?igshid=2nbkek49imi"
+        python ig_impression.py "https://www.instagram.com/p/CIs_W2-MU0M/?igshid=2nbkek49imi"
+        python ig_impression.py "https://www.instagram.com/p/CIs_W2-MU0M/?igshid=2nbkek49imi"
+        python ig_impression.py "https://www.instagram.com/p/CIs_W2-MU0M/?igshid=2nbkek49imi"
